# reemc_simulation

./: README.md  stack.xml
reemc_2dnav_gazebo/: CMakeLists.txt  package.xml
reemc_2dnav_gazebo/launch/: reemc_mapping.launch  reemc_navigation.launch
reemc_controller_configuration_gazebo/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
reemc_controller_configuration_gazebo/config/: hand_full_controllers.yaml  hand_full_ft_hey5_controllers.yaml  homing_controller.yaml  init_offset_controller.yaml  joint_trajectory_controllers.yaml  offsets.yaml  pal_motors_controller.yaml  pids.yaml  reemc_action_controllers.lower_body.yaml  reemc_action_controllers.yaml  reemc_drcsim_controllers.yaml  reemc_lower_body_controllers.yaml  reemc_lower_position_upper_action_controllers.yaml  reemc_pal_hardware_gazebo.yaml  squat_controller.yaml  walking_controller_full.yaml  walking_params.yaml
reemc_controller_configuration_gazebo/launch/: default_controllers.launch  load_walking_params.launch  reemc_action_controllers.launch  reemc_default_controllers.launch  reemc_drcsim_controllers.launch  reemc_hands_controllers.launch  reemc_homing_controller.launch  reemc_init_offset_controller.launch  reemc_pal_controllers.launch  reemc_squat_controller.launch  reemc_walking_controller.launch  walking_controller.launch
reemc_gazebo/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
reemc_gazebo/config/: joy_teleop.yaml  joy_teleop_sim.yaml  reemc.vcg  reemc_navigation_base.vcg  reemc_navigation_footstep.vcg
reemc_gazebo/launch/: joint_state.launch  joystick_teleop.launch  reemc_bringup.launch  reemc_bug.launch  reemc_empty_world.launch  reemc_empty_world_foot.launch  reemc_empty_world_lower_body  reemc_empty_world_lower_body.launch  reemc_foot.launch  reemc_gazebo.launch  reemc_gui.launch  reemc_indoor_world.launch  reemc_joystick_teleop.launch  reemc_localization.launch  reemc_localization_amcl.launch  reemc_localization_fake.launch  reemc_lower_body.launch  reemc_lower_body_no_controllers.launch  reemc_lower_boody.launch  reemc_mapping.launch  reemc_navigation.launch  reemc_navigation_base.launch  reemc_navigation_footstep.launch  reemc_odometry.launch  reemc_odometry_controller.launch  reemc_odometry_fake.launch  reemc_planning.launch  reemc_small_office_world_lower_body.launch  reemc_spawn.launch  reemc_spawn_foot.launch  reemc_spawn_full.launch  reemc_spawn_lower_body.launch  run_gazebo.launch
reemc_gazebo/maps/: map.yaml
reemc_gazebo/models/: database.config
reemc_gazebo/models/bauman/: model.sdf
reemc_gazebo/models/door_obstacle/: door_obstacle.sdf
reemc_gazebo/models/ikea_folke_chair/meshes/: mesh.dae
reemc_gazebo/models/ikea_harry_chair/meshes/: mesh.dae
reemc_gazebo/models/reemc_description/: meshes  model.config
reemc_gazebo/models/reemc_description_lower_body/: model.config  reemc_lower_body.sdf
reemc_gazebo/models/reemc_foot/: model.config  model.sdf  reemc_foot.sdf
reemc_gazebo/models/reemc_full/: model.config  model.sdf  model.urdf
reemc_gazebo/models/reemc_lower_body/: model.config  model.sdf  model.urdf
reemc_gazebo/worlds/: chairs.world  empty.world  reemc.world  reemc_indoor.world
reemc_gazebo_2dnav/: mainpage.dox  manifest.xml
reemc_gazebo_2dnav/config/: reemc.vcg  reemc_mapping.vcg  reemc_navigation_base.vcg  reemc_navigation_by.vcg  reemc_navigation_footstep.vcg  reemc_navigation_manual.vcg  reemc_planning.vcg
reemc_gazebo_2dnav/launch/: reemc_localization.launch  reemc_localization_fake.launch  reemc_localization_humanoid.launch  reemc_mapping.launch  reemc_navigation.launch  reemc_navigation_base.launch  reemc_navigation_footstep.launch  reemc_navigation_manual.launch  reemc_odometry.launch  reemc_odometry_controller.launch  reemc_planning.launch  reemc_planning_footstep.launch
reemc_gazebo_2dnav/maps/: map.pgm
reemc_gazebo_2dnav/maps/semifull_notsobad/: map.pgm
reemc_hardware_gazebo/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  reemc_hardware_gazebo_plugins.xml
reemc_hardware_gazebo/include/reemc_hardware_gazebo/: reemc_hardware_gazebo.h
reemc_hardware_gazebo/src/: reemc_hardware_gazebo.cpp
reemc_joints/: CMakeLists.txt  mainpage.dox  manifest.xml
reemc_joints/cfg/: PID.cfg
reemc_joints/scripts/: pal_joint_state_publisher
reemc_joints/src/: move_joints.cpp  pid_tuner.cpp
reemc_joints_test/: CMakeLists.txt  manifest.xml
reemc_joints_test/src/: move_joints.cpp
reemc_plugins/: CMakeLists.txt  mainpage.dox  manifest.xml
reemc_plugins/src/: FootContactModelPlugin.cpp  FootContactModelPlugin.h  PalModelPlugin.cpp  PalModelPlugin.h  PalSimPlugin.cpp  PalSimPlugin.h  REEMCPlugin.cpp  REEMCPlugin.h  gazebo_ros_force.cpp  gazebo_ros_force.h  gazebo_ros_forcetorque.cpp  gazebo_ros_forcetorque.h
reemc_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_utils/: mainpage.dox  manifest.xml
reemc_utils/launch/: empty_world.launch  joint_state.launch  reemc.launch  reemc_bringup.launch  reemc_gui.launch  reemc_no_controllers.launch  reemc_pal_empty_world.launch  reemc_pal_simple_world.launch  simple_world.launch  upload_reemc.launch
reemc_utils/models/: database.config
reemc_utils/models/reemc/: model.config  reemc.sdf
reemc_utils/worlds/: empty.world  reemc.world  simple.world
