<?xml version="1.0"?>
<package>
  <name>reemc_2dnav_gazebo</name>
  <version>0.9.0</version>
  <description>Gazebo-specific launch files and scripts needed to run
    navigation on the REEM-C robot in simulation.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Modified BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reemc_2dnav</run_depend>
  <run_depend>reemc_controller_configuration</run_depend>
  <run_depend>reemc_gazebo</run_depend>
  <run_depend>reemc_macro_states</run_depend>

</package>
