<?xml version="1.0"?>
<package>
  <name>reemc_controller_configuration_gazebo</name>
  <version>0.10.5</version>
  <description>Gazebo-specifig launch files and scripts needed to configure
    the controllers of the REEM-C robot in simulation.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Modified BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>

</package>
