<?xml version="1.0"?>
<package>
  <name>reemc_gazebo</name>
  <version>0.10.5</version>
  <description>Simulation files for the REEM-C robot.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Modified BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reemc_controller_configuration_gazebo</run_depend>
  <run_depend>reemc_description</run_depend>
  <run_depend>reemc_hardware_gazebo</run_depend>
  <run_depend>reemc_bringup</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>

</package>
