<?xml version="1.0"?>
<package>
  <name>reemc_hardware_gazebo</name>
  <version>0.10.1</version>
  <description>Gazebo plugin to control a REEM-C robot in simulation.</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>

  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>pal_ros_control</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>pal_hardware_gazebo</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>pal_ros_control</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>pal_hardware_gazebo</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/reemc_hardware_gazebo_plugins.xml"/>
  </export>

</package>
