<?xml version="1.0"?>
<package>
  <name>reemc_hardware_gazebo</name>
  <version>0.10.5</version>
  <description>Gazebo plugin to control a REEM-C robot in simulation.</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>

  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pal_hardware_gazebo</build_depend>

  <run_depend>pal_hardware_gazebo</run_depend>

  <export>
  </export>

</package>
